# python-starter-kit

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
docs/: NEW_PROJECT.md
notebooks/: 01_intro.ipynb
src/my_project/: greetings.py
tests/: test_greetings.py
